* CHANGES (1.6.x): Re-do r1485501 from trunk, minus the 1.7.10 part.
git-svn-id: https://svn.apache.org/repos/asf/subversion/branches/1.6.x@1485506 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ http://svn.apache.org/repos/asf/subversion/tags/1.6.23
 
  User-visible changes
   - Server-side bugfixes:
-    * fix repository corruption due to newline in filename (issue #4340)
+    * fix FSFS repository corruption due to newline in filename (issue #4340)
     * fix svnserve exiting when a client connection is aborted (r1482759)
 
   - Other tool improvements and bugfixes:
