* CHANGES: Bring 1.7.x up to 1.7.11 level from trunk merges.
Specifically by merging r1485508, r1503795, r1503795, r1503850


git-svn-id: https://svn.apache.org/repos/asf/subversion/branches/1.7.x@1503880 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,22 @@
+Version 1.7.11
+(23 Jul 2013, from /branches/1.7.x)
+http://svn.apache.org/repos/asf/subversion/tags/1.7.11
+
+ User-visible changes:
+  - General
+    * translation updates for Simplified Chinese
+
+  - Server-side bugfixes:
+    * mod_dav_svn: fix incorrect path canonicalization (r1503528)
+
+  - Other tool improvements and bugfixes:
+    * fix argument processing in contrib hook scripts (r1485350)
+
+ Developer-visible changes:
+  - Bindings:
+    * javahl: fix bug in error constructing code (r1405922)
+
+
 Version 1.7.10
 (30 May 2013, from /branches/1.7.x)
 http://svn.apache.org/repos/asf/subversion/tags/1.7.10
