--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 Version 1.7.14
-(?? Nov 2013, from /branches/1.7.x)
+(25 Nov 2013, from /branches/1.7.x)
 http://svn.apache.org/repos/asf/subversion/tags/1.7.14
 
  User-visible changes:
